# ACES

./: .gitignore  LICENSE  README.md  aces.py  pyproject.toml  requirements-dev.txt  requirements.txt  test_aces.py
.github/workflows/: publish-to-pypi.yml
dataset/: data1158.jsonl  data500.jsonl  test.ipynb
evaluation/: eval.py  eval_metrics.py
evaluation/captioning-results/: 2022-baseline-evaluation-preds.csv  2023-baseline-evaluation-preds.csv  audiocaption-preds.csv  captions_gt.pkl  captions_pred.pkl  panns-evaluation-preds.csv  passt-evaluation-preds.csv
evaluation/coco_caption/pycocoevalcap/tokenizer/: tmpbkyfr36k  tmpjgmy905x
evaluation/fense-experiment/experiment/: dataloader.py  main.py
evaluation/fense_experiment/: .gitignore
evaluation/fense_experiment/experiment/: dataloader.py  eval_metrics.py  main.py  sweep.py  sweep2.py
fense/: evaluator.py
src/aces/: __init__.py  aces.py  main.py
src/aces/fense/: data.py  download_utils.py  model.py
training/: main.py  settings.py  upload_model.py  utils.py
